--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,6 +4,8 @@
     <!-- Required meta tags -->
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no'>
+    <!-- Font Awesome -->
+    {{!-- <script src="https://kit.fontawesome.com/eae754adef.js" crossorigin="anonymous"></script> --}}
     <!-- Bootstrap CSS -->
     <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' crossorigin='anonymous'>
     <link rel='stylesheet' href='/stylesheets/custom.css'/>
@@ -41,9 +43,9 @@
         </nav>
     </header>
 
-    <div class='container'>
+    <main class='container'>
       {{{body}}}
-    </div>
+    </main>
     
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
