Subtle tweaks to presentation of metadata/response from S3

--- a/views/upload-dashboard.hbs
+++ b/views/upload-dashboard.hbs
@@ -29,9 +29,9 @@
                 {{device}} image <img src="/icons/box-arrow-up-right.svg" alt="external-link">
               </a>
               <ul class="list-group">
-                <li class="list-group-item list-group-item-light">
+                {{!-- <li class="list-group-item list-group-item-light">
                   Filename: {{filename}}
-                </li>
+                </li> --}}
                 <li class="list-group-item list-group-item-light">
                   Format: {{format}}
                 </li>
@@ -42,7 +42,7 @@
                   Height: {{height}}px
                 </li>
                 <li class="list-group-item list-group-item-light">
-                  Size: {{size}}
+                  Size: {{size}}B
                 </li>
               </ul>
 
