Updated naming convention to replace trailing '-' in filename with '.', updated RegEx method to extract metadata including universal S3 Path from response

--- a/views/upload-dashboard.hbs
+++ b/views/upload-dashboard.hbs
@@ -33,16 +33,16 @@
                   Filename: {{filename}}
                 </li> --}}
                 <li class="list-group-item list-group-item-light">
-                  Format: {{format}}
+                  <strong>Format:</strong> {{format}}
                 </li>
                 <li class="list-group-item list-group-item-light">
-                  Width: {{width}}px
+                  <strong>Width:</strong> {{width}}px
                 </li>
                 <li class="list-group-item list-group-item-light">
-                  Height: {{height}}px
+                  <strong>Height:</strong> {{height}}px
                 </li>
                 <li class="list-group-item list-group-item-light">
-                  Size: {{size}}B
+                  <strong>Size:</strong> {{size}} (B)
                 </li>
               </ul>
 
