Changed id 'originalImg' :>> 'image-file'

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,20 +10,20 @@
     <!-- Begins upload original image section -->
     {{!-- <div class="form-group row">
       <div class="col-sm-12">
-        <label for="originalImg" class="heading-label">Original Image (16:9)</label>
+        <label for="image-file" class="heading-label">Original Image (16:9)</label>
       </div>
       <div class="col-sm-12">
-        <input class="btn btn-info" type="file" name="originalImg" id="originalImg" />
+        <input class="btn btn-info" type="file" name="image-file" id="image-file" />
       </div>
     </div> --}}
     <div class="form-group row">
       {{!-- <div class="col-sm-12 col-md-2">
-        <label for="originalImg" class="heading-label">Original Image</label>
+        <label for="image-file" class="heading-label">Original Image</label>
       </div>       --}}
       <div class="col-sm-12 col-md-6">
         <div class="custom-file mb-4">
-          <input type="file" class="custom-file-input" id="originalImg" name="originalImg">
-          <label class="custom-file-label" for="originalImg">Choose file</label>
+          <input type="file" class="custom-file-input" id="image-file" name="image-file">
+          <label class="custom-file-label" for="image-file">Choose file</label>
         </div>
       </div>
       {{!-- Begins 'fit' select --}}
