Changed verbage around preview pane

--- a/views/upload-dashboard.hbs
+++ b/views/upload-dashboard.hbs
@@ -11,7 +11,7 @@
       <div class="list-group">
         <div id="sharp-results-section" class="row">
           <div class="col-sm-12">
-            <h2>Post-Processing Metadata:</h2>
+            <h2>Preview / Post-Processing Metadata</h2>
           </div>          
         {{#each images}}
           <div class="col-sm-6 sharp-result-card mb-2">
